--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -6,10 +6,9 @@
 	outline: none;
 	padding: 10px;
 	font-size: 13px;
-	color: #116466;
+	color: #C74441;
 	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 4px;
-	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
 	-webkit-transition: box-shadow .5s ease;
 	-moz-transition: box-shadow .5s ease;
 	-o-transition: box-shadow .5s ease;
@@ -44,9 +43,6 @@
     *margin-left: .3em; 
 }
 
-.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { 
-    background-color: #e6e6e6; 
-}
 
 .btn-large { 
     padding: 9px 14px; 
@@ -69,34 +65,14 @@
     transition: background-position 0.1s linear; 
 }
 
-.btn-primary, .btn-primary:hover { 
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); 
-    color: #ffffff; 
-}
 
 .btn-primary.active { 
     color: rgba(255, 255, 255, 0.75); 
 }
 
 .btn-primary { 
-    background-color: #116466; 
-    background-repeat: repeat-x; 
-    border: 1px solid #116466; 
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.4); 
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); 
+    background-color: #da7415; 
 }
-
-.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { 
-    filter: none; 
-    background-color: #138385; 
-}
-
-.btn-block { 
-    width: 100%; 
-    display:block; 
-}
-
-* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
 
 .login { 
